--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
     "firebase": "^10.4.0",
     "firebase-admin": "^11.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
